# hits-rs

./: .env  .env.prod  .gitignore  API.md  Cargo.toml  Dockerfile  README.md  Readme.md  docker-compose.yml
api/: Cargo.toml
api/src/: config.rs  dtos.rs  error.rs  handlers.rs  lib.rs  models.rs  services.rs  utils.rs  workers.rs
api/src/dtos/: admin.rs  auth.rs  common.rs  company.rs  group.rs  idea.rs  invitation.rs  profile.rs  skill.rs  smtp.rs  user.rs
api/src/handlers/: admin.rs  auth.rs  company.rs  group.rs  idea.rs  invitation.rs  profile.rs  skill.rs  user.rs
api/src/models/: admin.rs  auth.rs  common.rs  smtp.rs
api/src/services/: auth.rs  company.rs  group.rs  idea.rs  invitation.rs  profile.rs  skill.rs  user.rs
api/src/utils/: auth.rs  common.rs  security.rs  smtp.rs
api/src/workers/: invitation_worker.rs
api/templates/: notification.html
entity/: Cargo.toml
entity/src/: company.rs  company_member.rs  group.rs  group_member.rs  idea.rs  idea_checked.rs  idea_skill.rs  idea_status.rs  invitation.rs  lib.rs  password_reset.rs  prelude.rs  role.rs  skill.rs  skill_type.rs  users.rs  verification_code.rs
macros/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20251202_065032_create_user_table.rs  m20251205_050148_create_invitation_table.rs  m20251211_060650_create_password_reset_table.rs  m20251211_060650_create_verification_code_table.rs  m20251218_060739_create_company_table.rs  m20251221_103728_create_skill_table.rs  m20251222_064711_create_groups_table.rs  m20251225_134356_create_idea_table.rs  m20251225_134357_create_idea_checked_table.rs
src/: main.rs
