[package]
name = "hits-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum-extra = { version = "0.12.2", features = ["typed-header"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.3"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde_json = "1.0.145"
anyhow = "1.0.75"
dotenvy = "0.15.7"
entity = { path = "../entity" }
migration = { path = "../migration" }

[dependencies.sea-orm]
version = "2.0.0-rc.20"
features = [ 
    "sqlx-postgres", 
    "runtime-tokio-native-tls", 
    "debug-print", 
    "macros", 
    "with-chrono", 
    "with-uuid"
]